fix: correct phrasing in force majeure clause of legal terms

--- a/src/app/legal/agb/page.mdx
+++ b/src/app/legal/agb/page.mdx
@@ -74,7 +74,7 @@
         
         ## 10. Höhere Gewalt
 
-        10.1. Parteien haften nicht für Nichterfüllung infolge höherer Gewalt (Naturkatastrophen, Krieg, Maßnahmen der Behörden usw.) für die Dauer solcher обстоятельheiten.
+        10.1. Die Parteien haften nicht für die Nichterfüllung infolge höherer Gewalt (Naturkatastrophen, Krieg, Maßnahmen der Behörden usw.) für die Dauer solcher Umstände.
 
         ## 11. Anwendbares Recht und Gerichtsstand
 
